# Manya

./: .gitignore  LICENSE  NOTICE  README.md  hael-ecosystem-v2.skill  manya.skill  package-lock.json  package.json  worklog.md
.github/workflows/: ci.yml
agent-ctx/: 3-craft-engine-cleanup.md  5-hawk-tool-creator.md  7-root-cleanup.md
artifacts/helixflow/: index.html  package.json
artifacts/manya-site/: index.html  package.json
artifacts/usinga/: index.html  package.json
artifacts/usinga-mobile/: app.json  package.json
download/: manya-weave-live.html  manya-weave.html
scripts/: fix-esm-extensions.sh
site/manya/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
skills/hael-ecosystem/: SKILL.md
skills/manya-dev/: SKILL.md
tests/: performance-7x7.test.js
tools/Marriage/: package-lock.json  package.json  worklog.md
tools/cli/: package.json
tools/cybersecurity/: package.json
tools/forge/: package.json
tools/hawk/: .gitignore  (+14 more)
tools/usinga-api-nexus/backend/: Dockerfile  pyproject.toml
tools/usinga-api-nexus/backend/app/: __init__.py  db.py  main.py  schemas.py
tools/usinga-api-nexus/backend/app/api/: deps.py  router.py
tools/usinga-api-nexus/backend/app/core/: config.py  security.py
tools/usinga-api-nexus/backend/app/models/: __init__.py  entities.py
tools/usinga-api-nexus/backend/app/services/: __init__.py  audit.py  providers.py  routing.py
tools/usinga-api-nexus/backend/tests/: conftest.py  test_api.py
tools/usinga-api-nexus/backend/usinga_api_nexus_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+277 files in other folders)
