[project]
name = "usinga-api-nexus-backend"
version = "0.1.0"
description = "FastAPI backend for uSINGA - API NEXUS."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
